--- a/home.html
+++ b/home.html
@@ -446,7 +446,7 @@
       </div>
       <div class="stream-container">
         <iframe 
-          src="https://www.youtube.com/embed/live_stream?channel=UCYourChannelID"
+          src="https://www.youtube.com/embed/live_stream?channel=skimmynz"
           allowfullscreen>
         </iframe>
       </div>
