--- a/addons.html
+++ b/addons.html
@@ -286,7 +286,7 @@
         ☰
       </button>
       
-      <ul class="nav-links" id="navLinks">
+<ul class="nav-links" id="navLinks">
         <li>
           <a href="/">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -294,6 +294,16 @@
               <polyline points="9 22 9 12 15 12 15 22"/>
             </svg>
             Home
+          </a>
+        </li>
+        <li>
+          <a href="/rankings.html">
+            <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+              <circle cx="8.5" cy="7" r="4"/>
+              <polyline points="17 11 19 13 23 9"/>
+            </svg>
+            Rankings
           </a>
         </li>
         <li>
