--- a/rankings.html
+++ b/rankings.html
@@ -30,14 +30,24 @@
         ☰
       </button>
       
-      <ul class="nav-links" id="navLinks">
+<ul class="nav-links" id="navLinks">
         <li>
-          <a href="/" class="active">
+          <a href="/">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
               <polyline points="9 22 9 12 15 12 15 22"/>
             </svg>
             Home
+          </a>
+        </li>
+        <li>
+          <a href="/rankings.html" class="active">
+            <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+              <circle cx="8.5" cy="7" r="4"/>
+              <polyline points="17 11 19 13 23 9"/>
+            </svg>
+            Rankings
           </a>
         </li>
         <li>
