--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-adsense-account" content="ca-pub-5698535707794768">
+
   <title>Shadow Priest Hub | skimmynz</title>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5698535707794768"
+     crossorigin="anonymous"></script>
   
   <link rel="icon" type="image/png" sizes="32x32" href="/32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/16.png">
