--- a/rankings.html
+++ b/rankings.html
@@ -6,10 +6,15 @@
   <meta name="google-adsense-account" content="ca-pub-5698535707794768">
   <title>Shadow Priest Top 100 MoP Classic | skimmynz</title>
 
+  <meta name="description" content="View the top 100 Shadow Priest rankings for Mists of Pandaria Classic raids. Track DPS performance, popular talents, and boss-specific strategies.">
+  <meta name="keywords" content="shadow priest, rankings, MoP Classic, top 100, DPS, World of Warcraft, talent builds">
+
   <link rel="icon" type="image/png" sizes="32x32" href="/32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/16.png">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+
+
 
   <link rel="stylesheet" href="css/base.css" />
   <link rel="stylesheet" href="style.css" />
