--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="google-adsense-account" content="ca-pub-5698535707794768">
-
+  <meta name="description" content="Your complete Shadow Priest resource for Mists of Pandaria Classic. Rankings, guides, haste calculator, addons, and live streams.">
+  <meta name="keywords" content="shadow priest, MoP Classic, guide, rankings, haste calculator, World of Warcraft, skimmynz">
   <title>Shadow Priest Hub | skimmynz</title>
-
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5698535707794768"
      crossorigin="anonymous"></script>
   
