--- a/rankings.html
+++ b/rankings.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="google-adsense-account" content="ca-pub-5698535707794768">
-  <title>Shadow Priest Top 100 MoP Classic | skimmynz</title>
+  <title>Shadow Priest Rankings | skimmynz</title>
 
   <meta name="description" content="View the top 100 Shadow Priest rankings for Mists of Pandaria Classic raids. Track DPS performance, popular talents, and boss-specific strategies.">
   <meta name="keywords" content="shadow priest, rankings, MoP Classic, top 100, DPS, World of Warcraft, talent builds">
