--- a/addons.html
+++ b/addons.html
@@ -6,7 +6,7 @@
   <meta name="google-adsense-account" content="ca-pub-5698535707794768">
   <meta name="description" content="Download recommended Shadow Priest addons and WeakAuras for MoP Classic. Includes Plater profiles, SUF layouts, and custom WeakAuras.">
   <meta name="keywords" content="shadow priest, addons, WeakAuras, MoP Classic, Plater, Shadowed Unit Frames, World of Warcraft">
-  <title>Shadow Priest Addons & WeakAuras | skimmynz</title>
+  <title>Shadow Priest Addons & WeakAuras | MoP Classic | skimmynz</title>
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5698535707794768"
      crossorigin="anonymous"></script>
