--- a/haste.html
+++ b/haste.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="shadow priest, haste calculator, MoP Classic, DoT breakpoints, World of Warcraft">
   <meta name="google-adsense-account" content="ca-pub-5698535707794768">
   
-  <title>Shadow Priest Haste Calculator | skimmynz</title>
+  <title>Shadow Priest Haste Calculator | MoP Classic | skimmynz</title>
 	
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5698535707794768"
      crossorigin="anonymous"></script>
