--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="google-adsense-account" content="ca-pub-5698535707794768">
   <meta name="description" content="Your complete Shadow Priest resource for Mists of Pandaria Classic. Rankings, guides, haste calculator, addons, and live streams.">
   <meta name="keywords" content="shadow priest, MoP Classic, guide, rankings, haste calculator, World of Warcraft, skimmynz">
+  
   <title>Shadow Priest Hub | MoP Classic | skimmynz</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5698535707794768"
      crossorigin="anonymous"></script>
@@ -18,6 +19,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+  <link rel="canonical" href="https://skimmynz.com/">
   
   <script>
     window.whTooltips = { colorLinks: true, iconizeLinks: false, renameLinks: false };
