--- a/rankings.html
+++ b/rankings.html
@@ -14,7 +14,7 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
-
+  <link rel="canonical" href="https://skimmynz.com/rankings.html">
 
   <link rel="stylesheet" href="css/base.css" />
   <link rel="stylesheet" href="style.css" />
