--- a/haste.html
+++ b/haste.html
@@ -6,6 +6,8 @@
   <meta name="description" content="Optimise your Shadow Priest DoT breakpoints for Mists of Pandaria Classic. Calculate haste requirements for Shadow Word: Pain, Vampiric Touch, and Devouring Plague.">
   <meta name="keywords" content="shadow priest, haste calculator, MoP Classic, DoT breakpoints, World of Warcraft">
   <meta name="google-adsense-account" content="ca-pub-5698535707794768">
+
+  <link rel="canonical" href="https://skimmynz.com/haste">
   
   <title>Shadow Priest Haste Calculator | MoP Classic | skimmynz</title>
 	
