--- a/addons.html
+++ b/addons.html
@@ -18,6 +18,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+  <link rel="canonical" href="https://skimmynz.com/addons">
   
   <style>
     /* Additional styles specific to addons page */
