--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
       </a>
       <div class="stream-container">
         <iframe 
-          src="https://player.twitch.tv/?channel=skimmynz&parent=skimmynz.com&parent=localhost"
+          src="https://player.twitch.tv/?channel=skimmynz&parent=skimmynz.com"
           allowfullscreen>
         </iframe>
       </div>
