--- a/index2.html
+++ b/index2.html
@@ -474,46 +474,42 @@
   </nav>
 
   <div class="content-grid">
-    <!-- Twitch Stream -->
-    <div class="section-card">
-      <a href="https://twitch.tv/skimmynz" target="_blank" rel="noopener" style="text-decoration: none;">
-        </div>
-      </a>
-      <div class="stream-container">
-        <iframe 
-          src="https://player.twitch.tv/?channel=skimmynz&parent=skimmynz.com"
-          allowfullscreen>
-        </iframe>
-      </div>
+  <div class="section-card">
+    <div class="stream-container">
+      <iframe 
+        src="https://player.twitch.tv/?channel=skimmynz&parent=skimmynz.com"
+        allowfullscreen
+        loading="lazy"
+        title="SkimmyNZ Twitch Stream">
+      </iframe>
     </div>
+  </div>
 
-    <!-- YouTube Stream -->
-    <div class="section-card">
-      <a href="http://youtube.com/@skimmynz" target="_blank" rel="noopener" style="text-decoration: none;">
-        </div>
-      </a>
-      <div class="stream-container">
-        <iframe 
-          src="https://www.youtube.com/embed/LH5aODSFQ1o"
-          allowfullscreen>
-        </iframe>
-      </div>
+  <div class="section-card">
+    <div class="stream-container">
+      <iframe 
+        src="https://www.youtube.com/embed/LH5aODSFQ1o"
+        allowfullscreen
+        loading="lazy"
+        title="Shadow Priest MoP Classic PvE Guide – SkimmyNZ">
+      </iframe>
     </div>
+  </div>
 
-    <!-- Recent Rankings Preview -->
-    <div class="section-card full-width">
-      <div class="section-header">
-        <h2 class="section-title">Recent Top Performances</h2>
-      </div>
-      
-      <div id="rankings-preview">
-        <div class="loading">
-          <div class="loader"></div>
-          <div>Loading recent rankings...</div>
-        </div>
+  <!-- Recent Rankings Preview -->
+  <div class="section-card full-width">
+    <div class="section-header">
+      <h2 class="section-title">Recent Top Performances</h2>
+    </div>
+    
+    <div id="rankings-preview">
+      <div class="loading">
+        <div class="loader"></div>
+        <div>Loading recent rankings...</div>
       </div>
     </div>
   </div>
+</div>
 
   <script src="js/nav.js"></script>
   <script>
