--- a/haste.html
+++ b/haste.html
@@ -225,29 +225,13 @@
 
       <!-- Two Column Layout: Result + Breakpoints -->
       <div class="haste-results-layout">
-		<!-- Left: Result Card -->
-		<section class="result-card" aria-live="polite">
-		  <div class="result-label">Effective Haste</div>
-		  <div class="result-value" id="hasteResult">5.00%</div>
-		  <div class="conversion-text" id="conversionText">
-		    <span>5% base</span>
-		    <div class="active-buffs-display" id="activeBuffsDisplay"></div>
-		  </div>
-		  <div id="gcdWarning"></div>
-		  
-		  <!-- WeakAura Link Section -->
-		  <div class="weakaura-section">
-		    <a href="https://wago.io/7m5gdIAts" target="_blank" rel="noopener noreferrer" class="weakaura-link">
-		      <img src="https://media.wago.io/screenshots/7m5gdIAts/6967395d359f134f4939ccd7.gif" 
-		           alt="Shadow Priest WeakAura Preview" 
-		           class="weakaura-preview">
-		      <div class="weakaura-info">
-		        <span class="weakaura-title">Shadow Priest WeakAura</span>
-		        <span class="weakaura-subtitle">Click to view on Wago.io</span>
-		      </div>
-		    </a>
-		  </div>
-		</section>
+        <!-- Left: Result Card -->
+        <section class="result-card" aria-live="polite">
+          <div class="result-label">Effective Haste</div>
+          <div class="result-value" id="hasteResult">5.00%</div>
+          <div class="conversion-text" id="conversionText">Base: 5% Shadowform</div>
+          <div id="gcdWarning"></div>
+        </section>
 
         <!-- Right: DoT Breakpoint Table -->
         <section class="spells-table">
