--- a/haste.html
+++ b/haste.html
@@ -226,12 +226,26 @@
       <!-- Two Column Layout: Result + Breakpoints -->
       <div class="haste-results-layout">
         <!-- Left: Result Card -->
-        <section class="result-card" aria-live="polite">
-          <div class="result-label">Effective Haste</div>
-          <div class="result-value" id="hasteResult">5.00%</div>
-          <div class="conversion-text" id="conversionText">Base: 5% Shadowform</div>
-          <div id="gcdWarning"></div>
-        </section>
+		<section class="result-card" aria-live="polite">
+		          <div class="result-label">Effective Haste</div>
+		          <div class="result-value" id="hasteResult">5.00%</div>
+		          <div class="conversion-text" id="conversionText">Base: 5% Shadowform</div>
+		          <div id="gcdWarning"></div>
+		          
+		          <!-- WeakAura Display -->
+		          <div class="weakaura-container">
+		            <h3 class="weakaura-title">DoT Tracker WeakAura</h3>
+		            <a href="https://wago.io/7m5gdIAts" target="_blank" rel="noopener" class="weakaura-link">
+		              <img src="https://media.wago.io/screenshots/7m5gdIAts/6967395d359f134f4939ccd7.gif" 
+		                   alt="Shadow Priest DoT Tracker WeakAura" 
+		                   class="weakaura-image">
+		              <div class="weakaura-info">
+		                <span class="weakaura-name">View on Wago.io</span>
+		                <span class="weakaura-description">Click to download</span>
+		              </div>
+		            </a>
+		          </div>
+		        </section>
 
         <!-- Right: DoT Breakpoint Table -->
         <section class="spells-table">
