--- a/haste.html
+++ b/haste.html
@@ -234,7 +234,7 @@
           
           <!-- WeakAura Display -->
           <div class="weakaura-container">
-            <h3 class="weakaura-title">DoT Tracker WeakAura</h3>
+            <h3 class="weakaura-title">WeakAura</h3>
             <a href="https://wago.io/7m5gdIAts" target="_blank" rel="noopener" class="weakaura-link">
               <img src="https://media.wago.io/screenshots/7m5gdIAts/6967395d359f134f4939ccd7.gif" 
                    alt="Shadow Priest DoT Tracker WeakAura" 
