--- a/index.html
+++ b/index.html
@@ -545,11 +545,11 @@
   <div class="content-grid">
   <div class="section-card">
     <div class="stream-container">
-      <iframe 
-        src="https://player.twitch.tv/?channel=skimmynz&parent=skimmynz.com"
-        allowfullscreen
-        loading="lazy"
-        title="SkimmyNZ Twitch Stream">
+      <iframe
+          src="https://player.twitch.tv/?channel=skimmynz&parent=skimmynz.com"
+          height="480"
+          width="854"
+          allowfullscreen>
       </iframe>
     </div>
   </div>
