--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
   <div class="section-card">
     <div class="stream-container">
       <iframe
-          src="https://player.twitch.tv/?channel=skimmynz&parent=skimmynz.com"
+          src="https://player.twitch.tv/?channel=skimmynz&parent=skimmynz.com&parent=www.skimmynz.com"
           height="480"
           width="854"
           allowfullscreen>
