--- a/index.html
+++ b/index.html
@@ -557,10 +557,10 @@
   <div class="section-card">
     <div class="stream-container">
       <iframe 
-        src="https://www.youtube.com/embed/LH5aODSFQ1o"
+        src="https://www.youtube.com/embed/NaYavDBjAqo"
         allowfullscreen
         loading="lazy"
-        title="Shadow Priest MoP Classic PvE Guide – SkimmyNZ">
+        title="RANK 1 SHADOW PRIEST → MEGAERA 25M HEROIC">
       </iframe>
     </div>
   </div>
