--- a/haste.html
+++ b/haste.html
@@ -22,7 +22,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/base.css" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/haste.css" />
   
   <!-- Fonts -->
