--- a/rankings.html
+++ b/rankings.html
@@ -129,6 +129,6 @@
     </div>
   </div>
   <script src="js/nav.js"></script>
-  <script src="script.js" defer></script>
+  <script src="js/script.js" defer></script>
 </body>
 </html>
