--- a/addons_2.html
+++ b/addons_2.html
@@ -102,7 +102,7 @@
       <div class="page-header">
         <h1>ADDONS & WEAKAURAS</h1>
         <div class="last-updated" id="last-updated">
-          Last updated: 5th January 2026
+          Last updated: 26th January 2026<br>
           Resolution: 1920 x 1080 • UI Scale: 65%
         </div>
 
