--- a/addons.html
+++ b/addons.html
@@ -181,6 +181,11 @@
         name: "Fojji - Time to Kill",
         url: "https://wago.io/6HpAByX3d",
         coords: { x1: 1118, y1: 676, x2: 1172, y2: 700 }
+      },
+      {
+        name: "Details! Damage Meter",
+        url: "https://www.curseforge.com/wow/addons/details",
+        coords: { x1: 2, y1: 409, x2: 264, y2: 811 }
       }
     ];
 
