--- a/addons.html
+++ b/addons.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="google-adsense-account" content="ca-pub-5698535707794768">
-  <meta name="description" content="Download recommended Shadow Priest addons and WeakAuras for MoP Classic. Includes Plater profiles, SUF layouts, and custom WeakAuras.">
+  <meta name="description" content="Download the Shadow Priest Addons & Weakauras used by Skimmy in MoP Classic. Includes Plater & SUF profiles.">
   <meta name="keywords" content="shadow priest, addons, WeakAuras, MoP Classic, Plater, Shadowed Unit Frames, World of Warcraft">
   <title>Shadow Priest Addons & WeakAuras | MoP Classic | skimmynz</title>
 
