--- a/haste.html
+++ b/haste.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Optimise your Shadow Priest DoT breakpoints for Mists of Pandaria Classic. Calculate haste requirements for Shadow Word: Pain, Vampiric Touch, and Devouring Plague.">
+  <meta name="description" content="Optimise your damage as a Shadow Priest by reaching key Haste Breakpoints for Shadow Word: Pain, Vampiric Touch and Devouring Plague.">
   <meta name="keywords" content="shadow priest, haste calculator, MoP Classic, DoT breakpoints, World of Warcraft">
   <meta name="google-adsense-account" content="ca-pub-5698535707794768">
 
@@ -111,7 +111,9 @@
     <div class="haste-container">
       <header class="haste-header">
         <h1>Shadow Priest Haste Calculator</h1>
-        <p>Optimise your DoT breakpoints and maximize your damage potential in Mists of Pandaria Classic</p>
+        <p>Vampiric Touch – 5 ticks base – 15 sec duration<br>
+		Shadow Word: Pain – 6 ticks base – 18 sec duration<br>
+		Devouring Plague – 6 ticks base – 6 sec duration</p>
       </header>
 
       <!-- NEW: Top Controls Section -->
