--- a/rankings.html
+++ b/rankings.html
@@ -6,7 +6,7 @@
   <meta name="google-adsense-account" content="ca-pub-5698535707794768">
   <title>Shadow Priest Rankings | MoP Classic | skimmynz</title>
 
-  <meta name="description" content="View the top 100 Shadow Priest rankings for Mists of Pandaria Classic raids. Track DPS performance, popular talents, and boss-specific strategies.">
+  <meta name="description" content="View the Top 100 Global Shadow Priest rankings for Mists of Pandaria Classic 25 man Heroic raids.">
   <meta name="keywords" content="shadow priest, rankings, MoP Classic, top 100, DPS, World of Warcraft, talent builds">
 
   <link rel="icon" type="image/png" sizes="32x32" href="/32.png">
